--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,6 +1,7 @@
 name: 'My Workflow'
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
 
@@ -8,6 +9,11 @@ jobs:
   deploy:
     name: 'Deploy to Netlify'
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@v1
+        with:
+          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
       - uses: wallies/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
