--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     name: 'Deploy to Netlify'
     steps:
       - name: Harden Runner
@@ -14,6 +15,7 @@ jobs:
         with:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
+      - uses: actions/checkout@v3
       - uses: wallies/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
