--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -21,3 +21,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_DEPLOY_TO_PROD: true
+          node_version: 16.14
