--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -22,3 +22,5 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_DEPLOY_TO_PROD: true
           node_version: 16.14
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
