--- a/package.json
+++ b/package.json
@@ -4,34 +4,7 @@
   "description": "",
   "main": "test.js",
   "dependencies": {
-    "@step-security/malware-simulator": "^0.0.1",
-    "@microsoft/applicationinsights-web": "^2.6.4",
-    "@parcel/watcher": "2.0.5",
-    "@vscode/iconv-lite-umd": "0.7.0",
-    "@vscode/ripgrep": "^1.14.2",
-    "@vscode/sqlite3": "5.0.7",
-    "@vscode/sudo-prompt": "9.3.1",
-    "@vscode/vscode-languagedetection": "1.0.21",
-    "applicationinsights": "1.4.2",
-    "graceful-fs": "4.2.8",
-    "http-proxy-agent": "^2.1.0",
-    "https-proxy-agent": "^2.2.3",
-    "jschardet": "3.0.0",
-    "keytar": "7.9.0",
-    "minimist": "^1.2.6",
-    "native-is-elevated": "0.4.3",
-    "native-keymap": "3.3.0",
-    "native-watchdog": "1.4.0",
-    "node-pty": "0.11.0-beta11",
-    "spdlog": "^0.13.0",
-    "tas-client-umd": "0.1.4",
-    "v8-inspect-profiler": "^0.1.0",
-    "vscode-oniguruma": "1.6.1",
-    "vscode-proxy-agent": "^0.12.0",
-    "vscode-regexpp": "^3.1.0",
-    "vscode-textmate": "6.0.0",
-    "yauzl": "^2.9.2",
-    "yazl": "^2.4.3"
+    "@step-security/malware-simulator": "^0.0.1"    
   },
   "devDependencies": {},
   "scripts": {
