--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,21 +1,47 @@
-name: npm_ci
-on: [push, pull_request, workflow_dispatch]
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
 
-permissions:
-  contents: read
+# This workflow uses step-security/harden-runner GitHub Action
+# to restrict outbound traffic to allowed endpoints. Observing
+# network connectivity during the test stage of the CI pipeline
+# can help detect potentially compromised upstream dependencies.
+# For more information on the Harden Runner Action usage and
+# parameters, see https://github.com/step-security/harden-runner.
+name: Behavioral analysis of dependencies
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@v1
+        uses: step-security/harden-runner@9b0655f430fba8c7001d4e38f8d4306db5c6e0ab
         with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+          egress-policy: block
+          disable-telemetry: true
+          allowed-endpoints: >
+            github.com:443
+            registry.npmjs.org:443
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: "16"
-      - run: npm install
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
