--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -28,3 +28,30 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: npm install
+  test1:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: step-security/harden-runner@rc
+        with:
+          egress-policy: block
+          allowed-endpoints: >
+            github.com:443
+            registry.npmjs.org:443
+            vth0acprodeus2file0.blob.core.windows.net:443 # check for duplicate
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "16"
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - run: npm install
